<?xml version="1.0"?>
<package format="2">>
  <name>hmi_tools_pkg</name>
  <version>0.1.0</version>
  <description>Metapackage for Human-Machine Interface (HMI) tools related packages.</description>
  <author>Sukhman Marok</author>
  <maintainer email="ssmarok@gmail.com">Sukhman Marok</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<exec_depend></exec_depend>-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage />
  </export>
</package>
